# yuribot_rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  Yuribot.toml  Yuribot.toml.template
.github/workflows/: build.yml  release.yml  test.yml
cross/: Dockerfile
migrations/2019-02-07-103320_init_db/: up.sql
migrations/2020-07-11-212046_title_full_text_index/: down.sql  up.sql
migrations/2020-07-31-164836_fix_fts_corruption/: up.sql
src/: bot.rs  errors.rs  main.rs  parse_args.rs  purge_links.rs  scrapper.rs  utils.rs
src/db/: errors.rs  mod.rs  model.rs  schema.rs
src/reddit/: errors.rs  mod.rs  tests.rs
src/reddit_api/: errors.rs  mod.rs  response.json  tests.rs  types.rs
