[package]
name = "yuribot_rs"
version = "0.2.5"
authors = ["Paul Le Grand Des Cloizeaux <paul.legranddec@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.17"
config = { version = "0.10", features = ["toml"], default-features = false }
deadpool = "0.2"
diesel = { version = "1.4.0", features = ["sqlite"], default-features = false }
diesel_migrations = "1.4.0"
env_logger = "0.6"
futures = "0.3"
getopts = "0.2"
guard = "0.5"
hyper = "0.13"
hyper-tls = "0.4"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["min_sqlite_version_3_7_16", "bundled"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "16147f62247497457e1af824e4bf732b67b61f1c" }
thiserror = "1.0"
tokio = { version = "0.2", features = ["stream", "macros"] }

[profile.release]
lto = true
