[package]
name = "yuribot_rs"
version = "0.2.9"
authors = ["Paul Le Grand Des Cloizeaux <paul.legranddec@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.17"
config = { version = "0.13", features = ["toml"], default-features = false }
deadpool = "0.2"
diesel = { version = "2.0.3", features = ["sqlite"], default-features = false }
diesel_migrations = "2.0"
env_logger = "0.10"
futures = "0.3"
getopts = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["min_sqlite_version_3_7_16", "bundled"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "65ad5cfd578e9a1260ce6daac714eb2153c0bec7" }
thiserror = "1.0"
tokio = { version = "1.18.5", features = ["macros"] }
tokio-stream = "0.1"

[profile.release]
lto = true
